--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://0079bcd5-5964-4c02-b9f0-93829c28863b.preview.emergentagent.com
 WDS_SOCKET_PORT=443
