--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URL="mongodb://localhost:27017"
+MONGO_URL="mongodb+srv://abelalia:1afCDDlABjuX9pvV@clustercarrick.j4kkeeu.mongodb.net/?retryWrites=true&w=majority&appName=ClusterCarrick"
 DB_NAME="test_database"
